--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,14 +20,14 @@ documentation = "https://github.com/FHPythonUtils/MutableZip/blob/master/README.
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 
-[tool.poetry.dev-dependencies]
-pytest = "^7.1.1"
-coverage = "^6.3.2"
-pylint = "^2.13.5"
-handsdown = "^1.1.0"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.0"
+pylint = "^2.17.5"
+handsdown = "^2.0.1"
+coverage = "^7.3.0"
 
 [tool.black]
 line-length = 100
